--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ python:
   - "3.7"
   - "3.8"
   - "3.9-dev"
+install:
+  - pip install -r requirements.txt
 script:
   - pylint --output-format colorized --reports no setup.py expect_exception tests && python -m unittest --verbose tests.expect_exception_test
