--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-    name: Python ${{ matrix.python-version }}
+    name: tests for Python ${{ matrix.python-version }}
 
     steps:
       - uses: actions/checkout@v3
@@ -21,5 +21,8 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: ⭐ Lint ⭐
+        run: pylint --output-format colorized --reports no setup.py expect_exception tests
+
       - name: ⭐ Test ⭐
-        run: npm test
+        run: python -m unittest --verbose tests.expect_exception_test
